k8s/jira-lb.yaml
apiVersion: v1
kind: Service 
metadata:
  name: myapp-pod-loadbalancer-service
spec:
  type: LoadBalancer 
  selector:
    app: jira
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 8080 # Container Port
