k8s/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
  labels:
    app: jira-svc
spec:
  selector:
    app: jira
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
